base/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: beginner349-dev
  name: deployment-beginner349
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: beginner349-app
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: beginner349-app
    spec:
      serviceAccountName: beginner349-sa
      containers:
        - image: spring-boot-app
          imagePullPolicy: Always
          name: beginner349-app
          ports:
            - containerPort: 8080
