base/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: beginner349-dev
  name: service-beginner349
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: beginner349-application
